# molflow_threaded

./: .gitattributes  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  call_cmake_mac_gcc9.sh
CMake/: CMakeCache.txt  CMakeLists.txt
CMake/clipper/: CMakeLists.txt
CMake/compress/: CMakeLists.txt
CMake/lib_external/: googletest-distribution.cbp
CMake/lib_external/googlemock/: gmock.cbp
CMake/lib_external/googletest/: googletest-distribution.cbp  gtest.cbp
CMake/lib_external/googletest/googlemock/: gmock.cbp
CMake/lib_external/googletest/googletest/: gtest.cbp
CMake/molflow_testsuit/: CMakeLists.txt
CMake/molflow_win/: CMakeCache.txt  CMakeLists.txt
CMake/nativefiledialog/: CMakeLists.txt
CMake/png_zlib_win_library/: CMakeLists.txt
CMake/pugixml/: CMakeLists.txt
CMake/sdl_savepng/: CMakeLists.txt
CMake/truncatedgaussian/: CMakeLists.txt
MolflowGUIElements/: CreateShape.Designer.cs  CreateShape.Designer.cs_out.txt  CreateShape.cs  CreateShape.cs_out.txt  FacetAdvParams.Designer.cs  FacetAdvParams.Designer.cs_out.txt  FacetAdvParams.cs  MolflowElements.csproj  MoveFacet.Designer.cs  MoveFacet.Designer.cs_out.txt  MoveFacet.cs  Program.cs  converter_csharp.py  createshape.pptx
MolflowGUIElements/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Visual_Studio/: molflow_win.sln
Visual_Studio/clipper/: clipper.vcxproj  clipper.vcxproj.filters  ~AutoRecover.clipper.vcxproj
Visual_Studio/compress/: compress.vcxproj  compress.vcxproj.filters  ~AutoRecover.compress.vcxproj
Visual_Studio/gsl/: gsl.vcxproj  ~AutoRecover.gsl.vcxproj
Visual_Studio/molflow_win/: molflow_win.vcxproj  molflow_win.vcxproj.filters  ~AutoRecover.molflow_win.vcxproj
Visual_Studio/nativefiledialog/: nativefiledialog.vcxproj  nativefiledialog.vcxproj.filters  ~AutoRecover.nativefiledialog.vcxproj
Visual_Studio/png_zlib_win_library/: png_zlib_win_library.vcxproj  png_zlib_win_library.vcxproj.filters  ~AutoRecover.png_zlib_win_library.vcxproj
Visual_Studio/pugixml/: pugixml.vcxproj  pugixml.vcxproj.filters  ~AutoRecover.pugixml.vcxproj
Visual_Studio/sdl_savepng/: sdl_savepng.vcxproj  sdl_savepng.vcxproj.filters  ~AutoRecover.sdl_savepng.vcxproj
Visual_Studio/truncatedgaussian/: truncatedgaussian.vcxproj  truncatedgaussian.vcxproj.filters  ~AutoRecover.truncatedgaussian.vcxproj
additional_libraries/wbenny-ziplib-176e4b6d51fc/: Makefile
build_linux_debian/: clean_linux_debian.sh  compile_compress_linux.sh  compile_linux_debian.sh  compile_linux_debian_temp.sh  link_linux_debian.sh  readme.txt
build_linux_fedora/: clean_linux_fedora.sh  compile_compress_linux_fedora.sh  compile_linux_fedora.sh  compile_linux_fedora_temporary.sh  link_linux_fedora.sh  readme.txt
build_linux_opensuse/: clean_linux_opensuse.sh  compile_compress_opensuse.sh  compile_linux_debian_temp.sh  compile_linux_opensuse.sh  link_linux_opensuse.sh  readme.txt
build_mac/: clean_mac.sh  compile_compress_mac.sh  compile_mac.sh  compile_mac_debug.sh  compile_mac_temp.sh  copy_to_run.sh  link_mac.sh
copy_to_build/: copy2build_win.bat  launch_molflow.sh  updater_config_default_linux_debian.xml  updater_config_default_linux_fedora.xml  updater_config_default_win.xml
copy_to_build/desorption_yields/: ALUM_CH4.txt  ALUM_CO.txt  Groebner_CU_CH4.txt  Groebner_CU_CO.txt  Groebner_CU_CO2.txt  NEG_CH4.txt  NEG_CO.txt  NEG_CO2.txt  NEG_H2O.txt  OFHC_CO.txt  OFHC_CO2.txt
copy_to_build/images/: readme.txt
copy_to_build/parameter_catalog/: copy_to_bin.bat  dirac_burst.csv
desorption_yields/: ALUM_CO2.txt  ALUM_H2.txt  ALUM_H2O.txt  Groebner_CU_H2.txt  OFHC_CH4.txt  OFHC_H2.txt  OFHC_H2O.txt
images/: copy_to_bin.bat  pspbrwse.jbf
include/png_zlib_windows/png/: png.c
include/windows_only/: readme.txt
include/windows_only/png/: pngerror.c  pngpread.c  pngwutil.c
include/windows_only/zlib/: zconf.h
lib/win/debug/: bzip2.lib  lzma.lib  (+7 more)
lib_external/googletest/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
lib_external/win/: libcurl_a_x64.lib
linux_build/: compile_compress_linux.sh  compile_linux.sh  compile_linux2.sh  link_linux.sh  readme.txt
mac_build/: compile_compress_mac.sh  compile_mac.sh  compile_mac2.sh  link_mac.sh
molflow_tests/: molflow_test.py
molflow_tests/TestFiles/: gold_gcc_pumpmodel.geo  gold_gcc_results10.100_tex.xml  gold_pumpmodel.geo  gold_pumpmodel.geo7z  gold_results10.100_tex.xml  pumpmodel.geo  pumpmodel.geo7z  pumpmodel.xml  results10.100_tex.xml  test_pumpmodel.geo7z
parameter_catalog/: test_cat.csv
source/gtest/: molflow_testsuit.cpp
source/molflow_code/: FacetAdvParams.cpp  FacetAdvParams.h  FacetDetails.cpp  FacetDetails.h  GeometryRender.cpp  GeometryViewer.cpp  GlobalSettings.cpp  GlobalSettings.h  ImportDesorption.cpp  ImportDesorption.h  Intersect3Planes.cpp.obsolete  Intersect3Planes.h.obsolete  LICENSE  MolFlow.cpp  MolFlow.h  MolflowCLI.cpp  MolflowCLI.h  MolflowFacet.cpp  MolflowGeometry.cpp  MolflowGeometry.h  MolflowTypes.cpp  MolflowTypes.h  MolflowWorker.cpp  MomentsEditor.cpp  MomentsEditor.h  Movement.cpp  Movement.h  OutgassingMap.cpp  OutgassingMap.h  Parameter.cpp  Parameter.h  ParameterEditor.cpp  ParameterEditor.h  PressureEvolution.cpp  PressureEvolution.h  ProfilePlotter.cpp  ProfilePlotter.h  Simulation.cpp  Simulation.h  SimulationAC.cpp.obsolete  (+17 more)
source/shared_code/: ASELoader.cpp  ASELoader.h  AddVertex.cpp  AddVertex.h  AlignFacet.cpp  AlignFacet.h  AppUpdater.cpp  AppUpdater.h  Buffer_shared.cpp  Buffer_shared.h  BuildIntersection.cpp  BuildIntersection.h  CollapseSettings.cpp  CollapseSettings.h  CreateShape.cpp  CreateShape.h  Distributions.cpp  Distributions.h  DrawingArea.h  ExtrudeFacet.cpp  ExtrudeFacet.h  FacetCoordinates.cpp  FacetCoordinates.h  Facet_shared.cpp  Facet_shared.h  File.cpp  File.h  FormulaEditor.cpp  FormulaEditor.h  GeometryConverter.cpp  GeometryConverter.h  GeometryRender_shared.cpp  GeometryViewer.h  GeometryViewer_shared.cpp  Geometry_shared.cpp  Geometry_shared.h  GrahamScan.cpp  GrahamScan.h  HistogramPlotter.cpp  HistogramPlotter.h  (+57 more)
(+154 files in other folders)
